--- a/angular/src/app/views/login/login.component.html
+++ b/angular/src/app/views/login/login.component.html
@@ -25,8 +25,13 @@
                   <span class="input-group-text">
                     <i class="fa fa-lock"></i>
                   </span>
-                  <input type="password" class="form-control" placeholder="Password" required id="password"
+                  <input [type]="fieldTextType ? 'text' : 'password' " class="form-control" placeholder="Password" required id="password"
                     name="password" [(ngModel)]="login.password">
+                    <div class="input-group-append">
+                      <span class="input-group-text">
+                        <i class="fa" [ngClass]= "{'fa-eye-slash': !fieldTextType, 'fa-eye': fieldTextType }" (click)="toggleFieldTextType()"> </i>
+                      </span>
+                  </div>
                 </div>
                 <div class="form-group mb-4">
                   <a href=" #" class="float-left text-primary clr-primary">
