--- a/angular/src/app/views/login/login.component.html
+++ b/angular/src/app/views/login/login.component.html
@@ -36,7 +36,7 @@
                 <div class="form-group mb-4">
                   <a href=" #" class="float-left text-primary clr-primary">
                     <input class="form-check-input" type="checkbox" id="remember" [(ngModel)]="login.remember"
-                      name="remember" value="1" >
+                      name="remember" >
                     <label class="form-check-label" for="remember">&nbsp; Remember Me</label>
                   </a>
                 </div>
@@ -48,7 +48,7 @@
               </div>
             </div>
           </div>
-          <pre [innerHtml]="login | json"> </pre>
+          <!-- <pre [innerHtml]="login | json"> </pre> -->
         </div>
 
       </div>
