--- a/angular/src/app/views/products/products.component.html
+++ b/angular/src/app/views/products/products.component.html
@@ -1,137 +1,71 @@
 <!-- Button trigger modal -->
 
-<div class="row text-right p-2">
-  <div class="col-12 ">
-    <button class="nav-item btn btn-primary" (click)="showeModel()"><i class="fa fa-plus" aria-hidden="true">&nbsp; Add Products </i></button>
+<div class="container pt-5 card">
+  <div class="row text-left p-2">
+    <h4 class="col-12 ">
+      Manage Products
+    </h4>
+    <hr>
   </div>
-</div>
+  <div class="row text-right p-2">
+    <div class="col-12 ">
+      <button class="nav-item btn btn-primary" (click)="showeModel()"><i class="fa fa-plus" aria-hidden="true">&nbsp;
+          Add Products </i></button>
+    </div>
+  </div>
 
-<!--<div class="wrapper">
-  <div class="container">
-    <div class="row g-1">
-      <div class="col-md-3">
-        <div class="card p-3">
-          <div class="text-center">
-            <img src="../../assets/images/oons.jpeg" width="200">
-          </div>
-          <div class="product-details">
-            <span class="font-weight-bold d-block">$ 7.00</span>
-            <span>Red Redish</span>
-            <div class="buttons d-flex flex-row">
-              <div class="cart"><i class="fa fa-shopping-cart"></i></div> <button
-                class="btn btn-success cart-button btn-block"><span class="dot">1</span>Add to cart </button>
-            </div>
-            <div class="weight">
-              <small>1 piece 2.5kg</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card p-3">
-          <div class="text-center">
-            <img src="../../assets/images/ccorn.jpeg" width="200">
-          </div>
-          <div class="product-details">
-            <span class="font-weight-bold d-block">$ 7.00</span>
-            <span>Red Redish</span>
-            <div class="buttons d-flex flex-row">
-              <div class="cart"><i class="fa fa-shopping-cart"></i></div> <button
-                class="btn btn-success cart-button btn-block"><span class="dot">1</span>Add to cart </button>
-            </div>
-            <div class="weight">
-              <small>1 piece 2.5kg</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card p-3">
-          <div class="text-center">
-            <img src="../../assets/images/ppnl.jpeg" width="200">
-          </div>
-          <div class="product-details">
-            <span class="font-weight-bold d-block">$ 7.00</span>
-            <span>Red Redish</span>
-            <div class="buttons d-flex flex-row">
-              <div class="cart"><i class="fa fa-shopping-cart"></i></div> <button
-                class="btn btn-success cart-button btn-block"><span class="dot">1</span>Add to cart </button>
-            </div>
-            <div class="weight">
-              <small>1 piece 2.5kg</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card p-3">
-          <div class="text-center">
-            <img src="../../assets/images/kkrl.jpeg" width="200">
-          </div>
-          <div class="product-details">
-            <span class="font-weight-bold d-block">$ 7.00</span>
-            <span>Red Redish</span>
-            <div class="buttons d-flex flex-row">
-              <div class="cart"><i class="fa fa-shopping-cart"></i></div> <button
-                class="btn btn-success cart-button btn-block"><span class="dot">1</span>Add to cart </button>
-            </div>
-            <div class="weight">
-              <small>20 piece 2.5kg</small>
-            </div>
-          </div>
-        </div>
-      </div>
+
+  <div class="container-fluid app-user bg-white p-5">
+    <div class="table-responsive-lg">
+      <!-- list -->
+      <table [dtOptions]="dtOptions" datatable [dtTrigger]="dtTrigger"
+        class="table table-bordered table-hover table-striped" style="width: 100%">
+        <thead>
+          <tr class="text-nowrap text-primary">
+            <th>S.n.</th>
+            <th>Product Name</th>
+            <th>Product Image</th>
+            <th>Product Price</th>
+            <th>Product Margin</th>
+            <th>Product Discription</th>
+            <!-- <th>Role</th> -->
+            <th>Status</th>
+            <th class="text-center">Actions</th>
+          </tr>
+        </thead>
+        <tbody class="text-wrap">
+          <tr class=" border" *ngFor="let product of productsList; let i=index">
+            <th scope="row">{{i+1}}</th>
+            <td>{{product?.productname}}</td>
+            <td><img [src]="product?.productImg" width="150px" height="100px"> </td>
+            <td>{{product?.productprice}}</td>
+            <td>{{product?.productmargin}}</td>
+            <td>{{product?.Productdescription}}</td>
+            <!-- <td>{{product.role == 'admin' ? 'Admin' : 'User'}}</td> -->
+            <td>
+              <!-- <ui-switch (change)="changeUserStatus(product)" [(ngModel)]="product.status">
+            </ui-switch> -->
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault"
+                  (change)="changeUserStatus(product)" [(ngModel)]="product.status" />
+                <label class="form-check-label" for="flexSwitchCheckDefault">{{product.status ? 'On': 'Off'}}</label>
+              </div>
+            </td>
+            <td class="text-center">
+              <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-sm btn-primary edit me-1" (click)="showeModel(product)"><i
+                    class="fa fa-edit"></i></button>
+                <button type="button" class="btn btn-sm btn-danger delete" (click)="showUserDeleteModal(product)"><i
+                    class='fa fa-trash' style='font-size:24px;color: white'></i></button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
--->
-<div class="container-fluid app-user bg-white p-5">
-  <div class="table-responsive-lg">
-    <!-- list -->
-    <table [dtOptions]="dtOptions" datatable [dtTrigger]="dtTrigger"
-      class="table table-bordered table-hover table-striped" style="width: 100%">
-      <thead>
-        <tr class="text-nowrap text-primary">
-          <th>S.n.</th>
-          <th>Product Name</th>
-          <th>Product Image</th>
-          <th>Product Price</th>
-          <th>Product Margin</th>
-          <th>Product Discription</th>
-          <!-- <th>Role</th> -->
-          <th>Status</th>
-          <th class="text-center">Actions</th>
-        </tr>
-      </thead>
-      <tbody class="text-wrap">
-        <tr class=" border" *ngFor="let product of productsList; let i=index">
-          <th scope="row">{{i+1}}</th>
-          <td>{{product?.productname}}</td>
-          <td><img [src]="product?.productImg" width="150px" height="100px"> </td>
-          <td>{{product?.productprice}}</td>
-          <td>{{product?.productmargin}}</td>
-          <td>{{product?.Productdescription}}</td>
-          <!-- <td>{{product.role == 'admin' ? 'Admin' : 'User'}}</td> -->
-          <td>
-            <!-- <ui-switch (change)="changeUserStatus(product)" [(ngModel)]="product.status">
-            </ui-switch> -->
-            <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" (change)="changeUserStatus(product)" [(ngModel)]="product.status" />
-              <label class="form-check-label" for="flexSwitchCheckDefault">{{product.status ? 'On': 'Off'}}</label>
-            </div>
-          </td>
-          <td class="text-center">
-            <div class="d-flex justify-content-center">
-               <button type="button" class="btn btn-sm btn-primary edit me-1" (click)="showeModel(product)"><i
-                    class="fa fa-edit"></i></button>
-              <button type="button" class="btn btn-sm btn-danger delete" (click)="showUserDeleteModal(product)"><i class='fa fa-trash' style='font-size:24px;color: white'></i></button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <br><br>
 <!--<pre [innerHtml]="productsList | json"> </pre>-->
 
@@ -141,7 +75,8 @@
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title"><i class="fa fa-pencil"></i>&nbsp;{{ productForm.value._id ? 'Edit' : 'Add'}} Products</h4>
+        <h4 class="modal-title"><i class="fa fa-pencil"></i>&nbsp;{{ productForm.value._id ? 'Edit' : 'Add'}} Products
+        </h4>
         <button type="button" class="close" (click)="closeModel()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -158,9 +93,9 @@
               <input type="text" class="form-control" id="ProductName" autocomplete="off" formControlName="productname">
             </div>
             <p class="alert alert-danger mt-1"
-            *ngIf="formError.productname.invalid && (formError.productname.dirty || formError.productname.touched)">
-            <span *ngIf="formError.productname.errors.required">Product Name is Required.</span>
-            <span *ngIf="formError.productname.errors.maxlength">MaxLength is 20.</span>
+              *ngIf="formError.productname.invalid && (formError.productname.dirty || formError.productname.touched)">
+              <span *ngIf="formError.productname.errors.required">Product Name is Required.</span>
+              <span *ngIf="formError.productname.errors.maxlength">MaxLength is 20.</span>
             </p>
           </div>
           <div class="row mb-3">
@@ -168,12 +103,13 @@
               <label for="productprice" class=" col-form-label">Product Price</label>
             </div>
             <div class="col-md-9">
-              <input type="text" class="form-control" id="productPrice" autocomplete="off" formControlName="productprice">
+              <input type="text" class="form-control" id="productPrice" autocomplete="off"
+                formControlName="productprice">
             </div>
             <p class="alert alert-danger mt-1"
-            *ngIf="formError.productprice.invalid && (formError.productprice.dirty || formError.productprice.touched)">
-            <span *ngIf="formError.productprice.errors.required">Product Price is Required.</span>
-            <span *ngIf="formError.productprice.errors.maxlength">MaxLength is 5.</span>
+              *ngIf="formError.productprice.invalid && (formError.productprice.dirty || formError.productprice.touched)">
+              <span *ngIf="formError.productprice.errors.required">Product Price is Required.</span>
+              <span *ngIf="formError.productprice.errors.maxlength">MaxLength is 5.</span>
             </p>
           </div>
           <div class="row mb-3">
@@ -181,23 +117,25 @@
               <label for="productmargin" class=" col-form-label">Product Margin</label>
             </div>
             <div class="col-md-9">
-              <input type="text" class="form-control" id="productMargin" autocomplete="off" formControlName="productmargin">
+              <input type="text" class="form-control" id="productMargin" autocomplete="off"
+                formControlName="productmargin">
             </div>
             <p class="alert alert-danger mt-1"
-            *ngIf="formError.productmargin.invalid && (formError.productmargin.dirty || formError.productmargin.touched)">
-            <span *ngIf="formError.productmargin.errors.required">Product Margin is Required.</span>
-            <span *ngIf="formError.productmargin.errors.maxlength">MaxLength is 5.</span>
+              *ngIf="formError.productmargin.invalid && (formError.productmargin.dirty || formError.productmargin.touched)">
+              <span *ngIf="formError.productmargin.errors.required">Product Margin is Required.</span>
+              <span *ngIf="formError.productmargin.errors.maxlength">MaxLength is 5.</span>
             </p>
           </div>
           <div class="col-md-12">
             <label for="ProductDescription" class="col-form-label">Product Description</label>
           </div>
           <div class="col-md-12">
-            <textarea class="form-control" id="ProductDescription" rows="3" autocomplete="off" formControlName="Productdescription">         </textarea>
+            <textarea class="form-control" id="ProductDescription" rows="3" autocomplete="off"
+              formControlName="Productdescription">         </textarea>
             <p class="alert alert-danger mt-1"
-            *ngIf="formError.Productdescription.invalid && (formError.Productdescription.dirty || formError.Productdescription.touched)">
-            <span *ngIf="formError.Productdescription.errors.required">Product Description is Required.</span>
-            <span *ngIf="formError.Productdescription.errors.maxlength">MaxLength is 300.</span>
+              *ngIf="formError.Productdescription.invalid && (formError.Productdescription.dirty || formError.Productdescription.touched)">
+              <span *ngIf="formError.Productdescription.errors.required">Product Description is Required.</span>
+              <span *ngIf="formError.Productdescription.errors.maxlength">MaxLength is 300.</span>
             </p>
           </div>
           <div class="row mb-3 pt-3" *ngIf="!productForm.value.productImg">
@@ -216,15 +154,15 @@
               <span class="fa fa-remove text-danger cursor-pointer fs-6 remove-file-icon"
                 (click)="onFileSelected($event)"> </span>
               <div class="preview bg-warning">
-                <img  [src]="productForm.value.productImg"
-                  class="rounded d-block w-100" height="250px">
+                <img [src]="productForm.value.productImg" class="rounded d-block w-100" height="250px">
 
               </div>
             </div>
-            </div>
+          </div>
         </form>
         <div class="modal-footer border-top-0 d-flex  justify-content-start">
-          <button type="button" class="btn btn-primary me-1" type="submit" [disabled]="!productForm.valid"(click)="addProduct()">{{ productForm.value._id ? 'Edit' : 'Add'}} Product</button>
+          <button type="button" class="btn btn-primary me-1" type="submit" [disabled]="!productForm.valid"
+            (click)="addProduct()">{{ productForm.value._id ? 'Edit' : 'Add'}} Product</button>
           <button type="button" class="btn btn-danger" (click)="closeModel()">Close</button>
         </div>
         <pre [innerHtml]="this.productForm.value | json"></pre><br><br>
@@ -237,8 +175,8 @@
 
 
 
-<div bsModal #deleteProductrModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true" [config]="{backdrop: 'static', keyboard: false, animated: true}">
+<div bsModal #deleteProductrModal="bs-modal" class="modal fade" tabindex="-1" role="dialog"
+  aria-labelledby="myModalLabel" aria-hidden="true" [config]="{backdrop: 'static', keyboard: false, animated: true}">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -250,15 +188,15 @@
       <div class="modal-body">
         <h4>Are you sure want to delete this Product?</h4>
         <p><br>
-           <b><u>Product Details :</u></b><br>
-           Product Name- {{productnfo.productname}}  <br>
-           Product Price- {{productnfo.productprice}} <br>
-           Product Margin- {{productnfo.productmargin}} <br>
-           Product Discription- {{productnfo.Productdescription}}
+          <b><u>Product Details :</u></b><br>
+          Product Name- {{productnfo.productname}} <br>
+          Product Price- {{productnfo.productprice}} <br>
+          Product Margin- {{productnfo.productmargin}} <br>
+          Product Discription- {{productnfo.Productdescription}}
         </p>
       </div>
       <div class="modal-footer border-top-0 d-flex  justify-content-start">
-         <button type="button" class="btn btn-primary" (click)="closeModel()">Close</button>
+        <button type="button" class="btn btn-primary" (click)="closeModel()">Close</button>
         <button type="button" class="btn btn-danger" (click)="deleteProduct()">Delete</button>
       </div>
     </div>
