--- a/angular/src/app/views/products/products.component.html
+++ b/angular/src/app/views/products/products.component.html
@@ -3,7 +3,7 @@
 <div class="container pt-5 card">
   <div class="row text-left p-2">
     <h4 class="col-12 ">
-      Manage Products
+      MANAGE PRODUCTS
     </h4>
     <hr>
   </div>
@@ -22,15 +22,15 @@
         class="table table-bordered table-hover table-striped" style="width: 100%">
         <thead>
           <tr class="text-nowrap text-primary">
-            <th>S.n.</th>
-            <th>Product Name</th>
-            <th>Product Image</th>
-            <th>Product Price</th>
-            <th>Product Margin</th>
-            <th>Product Discription</th>
+            <th>S.No.</th>
+            <th>PRODUCT NAME</th>
+            <th>PRODUCT IMAGE</th>
+            <th>PRODUCT PRICE</th>
+            <th>PRODUCT MARGIN</th>
+            <th>PRODUCT DESCRIPTION</th>
             <!-- <th>Role</th> -->
-            <th>Status</th>
-            <th class="text-center">Actions</th>
+            <th>STATUS</th>
+            <th class="text-center">ACTIONS</th>
           </tr>
         </thead>
         <tbody class="text-wrap">
