--- a/angular/src/app/views/signup/signup.component.html
+++ b/angular/src/app/views/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="app-body">
+<div class="app-body mb-5">
   <main class="main d-flex align-items-center min-h">
     <div class="container mt-5 p-2">
       <div class="row justify-content-center">
@@ -143,7 +143,7 @@
             </div>
           </div>
 
-          <pre [innerHtml]="this.signupForm.value | json"></pre><br><br>
+          <!--<pre [innerHtml]="this.signupForm.value | json"></pre><br><br>-->
         </div>
       </div>
     </div>
