--- a/angular/src/app/views/product-list/product-list.component.html
+++ b/angular/src/app/views/product-list/product-list.component.html
@@ -1,8 +1,8 @@
 <!-- Button trigger modal -->
-<div class="container pt-5 card">
+<div class="container pt-5 mb-5 card ">
   <div class="row text-left p-2">
     <h4 class="col-12 ">
-     Your Orders Here
+     YOUR PLACED ORDER'S ARE HERE
     </h4>
     <hr>
   </div>
@@ -16,9 +16,9 @@
           <tr class="text-nowrap text-primary ">
             <th>S.N.</th>
             <th>PRODUCT ID</th>
-            <th>PRODUCT NAME</th>
+            <th>PRODUCT (S)</th>
             <th>PRODUCT IMAGE</th>
-            <th>PRODUCT PRICE(OFF)</th>
+            <th>PRODUCT PRICE <b>(OFF)</b></th>
             <th>QUANTITY</th>
             <th>PRODUCT DISCRIPTION</th>
             <th>ORDER DATE</th>
@@ -28,7 +28,7 @@
           <tr class=" border" *ngFor="let order of orderList; let i=index">
             <th scope="row">{{i+1}}</th>
             <td>{{order.razorpayOrderId}}</td>
-            <td>{{order.productDetails?.productname}}</td>
+            <td>{{order.productDetails?.productname}} <b>({{order.size}})</b></td>
             <td><img [src]="order.productDetails?.productImg" width="150px" height="100px"> </td>
             <td>{{order.amount}} ({{order.productDetails?.productmargin}} %)</td>
             <td>{{order.quantity}}</td>
