--- a/angular/src/app/views/user-profile/user-profile.component.html
+++ b/angular/src/app/views/user-profile/user-profile.component.html
@@ -73,10 +73,9 @@
             <div class="col-sm-8">
               <input type="text" numbersOnly class="form-control" maxlength="10" placeholder="Phone number"
                 name="phonenumber" [(ngModel)]="currentUser.phonenumber" (ngModelChange)="patternMatchCheck(currentUser.phonenumber, 'phoneNumber')">
-              <p class="alert fade show mt-1 mb-0" role="alert"
-                >
-                Phone number should be 10 digits.
-              </p>
+              <small class="alert-light fade show" role="alert">
+                Phone number should be  of 10 digits.
+              </small>
             </div>
 
           </div>
