--- a/angular/src/app/views/home/home.component.html
+++ b/angular/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col pb-3" *ngFor="let product of productsList; let i=index">
       <div class="card h-100 m-auto" >
         <img [src]="product?.productImg" class="card-img-top product-img p-3" height="200px" [routerLink]="['/product-details', product._id ]">
-        <div class="card-body">
+        <div class="card-body mt-3">
           <h5 class="card-title">{{product?.productname}}</h5>
         </div>
         <ul class="list-group list-group-flush">
