--- a/angular/src/app/views/signup/signup.component.html
+++ b/angular/src/app/views/signup/signup.component.html
@@ -137,7 +137,7 @@
               </form>
 
               <div class="text-center mt-20 ">
-                <a href="/login">Already have an
+                <a [routerLink]="['/login']">Already have an
                   account!</a>
               </div>
             </div>
