--- a/angular/src/app/views/login/login.component.html
+++ b/angular/src/app/views/login/login.component.html
@@ -34,17 +34,20 @@
                   </div>
                 </div>
                 <div class="form-group mb-4">
-                  <a href=" #" class="float-left text-primary clr-primary">
+                  <a class="float-left text-primary clr-primary">
                     <input class="form-check-input" type="checkbox" id="remember" [(ngModel)]="login.remember"
-                      name="remember" >
+                      name="remember" style="cursor: pointer;" >
                     <label class="form-check-label" for="remember">&nbsp; Remember Me</label>
                   </a>
                 </div>
-                <div class="row text-center">
+                <div class="row float-right">
                   <div class="col-12">
                     <button class="nav-item btn btn-primary" (click)="doLogin()" [disabled]="!login.email  || !login.password">Login</button>
                   </div>
                 </div>
+              </div>
+              <div class="text-center mt-20 ">
+                <a [routerLink]="['/signup']">If new User, then Please Signup</a>
               </div>
             </div>
           </div>
